# AllGoRythm

./: .gitignore  Makefile  README copy.md  README.md  pyproject.toml
allgorythms/algorithms/cpp/sort/: insertion.cpp
allgorythms/algorithms/go/sort/insertion/: main.go
allgorythms/algorithms/python/sort/insertion/: variant_1.py
allgorythms/model/: predict.py  train.py
allgorythms/scripts/: find_algos.py  generate_dataset.py
allgorythms/tests/unit/scripts/: test_generate_dataset.py
