[project]
name = "allgorythms"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "black>=25.1.0",
    "chardet>=5.2.0",
    "nltk>=3.9.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "torch>2.1.0",
    "tree-sitter>=0.25.1",
    "tree-sitter-languages>=1.10.2",
]

[tool.black]
line-length = 80
